--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,8 @@ code {
 }
 @media (min-width: 0) and (max-width: 767px) {
   .aboutMeTabs{
-    grid-template-columns:1fr
+    grid-template-columns:1fr;
+    padding: 40px 25px;
   }
 
 }
